# storage/api-docs/api-docs.json
@@ -147,6 +147,53 @@
                 ]
             }
         },
+        "/api/groups/subscribers": {
+            "get": {
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "Gets the list of users subscribed to users Group",
+                "operationId": "App\\Http\\Controllers\\GroupController::subscribers",
+                "responses": {
+                    "200": {
+                        "description": "Group subscribers returned",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "success": [
+                                        {
+                                            "id": 2,
+                                            "group_id": null,
+                                            "name": "Kristof",
+                                            "pic_url": null,
+                                            "email": "kristof@usc.edu",
+                                            "created_at": "2018-10-30 01:13:02"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/400"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/401"
+                    }
+                },
+                "security": [
+                    "bearer"
+                ]
+            }
+        },
         "/api/groups/create": {
             "post": {
                 "tags": [
@@ -261,6 +308,53 @@
                                 },
                                 "example": {
                                     "success": "Item already exists"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/400"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/401"
+                    }
+                },
+                "security": [
+                    "bearer"
+                ]
+            }
+        },
+        "/api/items/subscribers/{item_id}": {
+            "get": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Gets the list of users subscribed to a Item",
+                "operationId": "App\\Http\\Controllers\\ItemController::subscribers",
+                "responses": {
+                    "200": {
+                        "description": "Item subscribers returned",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "success": [
+                                        {
+                                            "id": 2,
+                                            "group_id": null,
+                                            "name": "Kristof",
+                                            "pic_url": null,
+                                            "email": "kristof@usc.edu",
+                                            "created_at": "2018-10-30 01:13:02"
+                                        }
+                                    ]
                                 }
                             }
                         }
